# javacore-analyser

./: .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS.md  SECURITY.md  code_snapshot_collection.py  config.ini  constants.py  java_thread.py  javacoreCollector.sh  javacore_analyser_web.py  javacore_analyzer.py  javacore_set.py  logging_utils.py  pyproject.toml  requirements.txt  stack_trace.py  test_classifier_fix.py  thread_snapshot.py  verbose_gc.py
.bob/rules-advance/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
.github/workflows/: osv-scanner-scheduled.yml  python-publish.yml  scorecard.yml
collectors/: javacoreCollector.sh
data/jquery/: wait2scripts.js
docs/: PLUGIN_ARCHITECTURE_DESIGN.md  performance_test.py
docs/example_plugin/: README.md  __init__.py  plugin.py
src/javacore-analyser/: constants.py  javacore_analyser_web.py  javacore_set.py  verbose_gc.py
src/javacore_analyser/: Properties.py  __init__.py  __main__.py  abstract_snapshot_collection.py  blocking_analyzer.py  code_snapshot_collection.py  common_utils.py  config.ini  constants.py  exceptions.py  file_discovery.py  file_resolver.py  har_file.py  html_report_generator.py  java_thread.py  javacore.py  javacore_analyser.py  javacore_analyser_batch.py  javacore_analyser_web.py  javacore_analyzer.py  javacore_set.py  jvm_config_parser.py  plugin_coordinator.py  plugin_interface.py  plugin_manager.py  properties.py  properties_helper.py  snapshot_collection_collection.py  stack_trace.py  stack_trace_element.py  thread_snapshot.py  tips.py  verbose_gc.py  xml_report_generator.py
src/javacore_analyser/ai/: add_stack_depth.py  ai.py  ai_overview_prompter.py  csv_dataset_generator.py  data.csv  huggingface_llm.py  huggingfacellm.py  llm.py  llm_local_model.py  ollama_llm.py  performance_recommendations_prompter.py  prompter.py  tips_prompter.py  watsonx_llm.py
src/javacore_analyser/data/: expand.js  style.css  style.js
src/javacore_analyser/data/jquery/: jq.css  search.js  sorting.js  tablesorter-init.js  theme.blue.css  wait2scripts.js
src/javacore_analyser/data/prompts/: performance_recommendations_prompt.txt
src/javacore_analyser/data/xml/: report.xsl
src/javacore_analyser/ml/: classify_javacore_inference.py  classify_javacore_inference_test_code.py  csv_dataset_generator.py  javacoreThreadsClassifierInputParameters.json  javacoreThreadsClassifierLabelEncoderMapping.json
src/javacore_analyser/static/data/: style.js
src/javacore_analyser/templates/: index.html
templates/: index.html
test/: test_code_snapshot_collection.py  test_exceptions.py  test_gc_collection.py  test_har_file.py  test_java_thread.py  test_javacore.py  test_javacore_analyser.py  test_javacore_analyzer.py  test_javacore_classifier.py  test_javacore_set.py  test_plugin_system.py  test_properties.py  test_stack_trace.py  test_stack_trace_element.py  test_thread_snapshot.py  test_tips.py  test_verbose_gc_parser.py  test_zip_slip_security.py
test/data/: empty_pages.har
test/data/archives/: javacores.7z  javacores.tar  javacores.tar.bz2
test/data/javacores/: jazz.net_Archive [25-01-03 11-07-56].har  verbosegc.230420.33424.txt.001
test/data/verboseGcJavacores/: verbosegc.230602.83156.txt.001
(+12 files in other folders)
