[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name='javacore_analyser'
readme = "README.md"
version="2.0RC1"
description="Package to analyse IBM Javacore files"
dependencies=["dicttoxml", "py7zr", "lxml", "pyana"]
requires-python = ">=3.9"
license = { file = "LICENSE" }

[project.scripts]
javacore-analyser="javacore_analyser:main"

[project.urls]
"Homepage" = "https://github.com/IBM/javacore-analyser"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml,
# so you do NOT have to specify this line.
include-package-data = true